activity_main.xml:  1. change "price" label to "order summary",  2. change TextView for price value  to have and id of ""@+id/order_summary_text_view"
MainActivity.java: displayMessage(String message) method
3. change variable name from priceTextView to orderSummaryTextView,
4. change R.id.price_text_view to R.id.order_summary_text_view

activity_main.xml:
1. add topping header
2. add a checkbox for whipped cream

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,21 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:textAllCaps="true"
+        android:textSize="16sp"
+        android:text="toppings" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:textSize="16sp"
+        android:text="Whipped Cream"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
