--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_marginLeft="16dp"
         android:paddingLeft="24dp"
         android:textSize="16sp"
+        android:onClick="onCheckBoxClicked"
         android:text="Whipped Cream"/>
 
     <TextView
