--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="vertical"
+    android:scrollbarSize="24dp"
     tools:context="com.example.android.justjava.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/user_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:inputType="textMultiLine"
+            android:hint="Name" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,8 +34,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:onClick="onCheckBoxClicked"
             android:paddingLeft="24dp"
+            android:paddingStart="24dp"
+            android:paddingRight="24dp"
             android:text="Whipped Cream"
             android:textSize="16sp" />
 
@@ -35,8 +47,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:onClick="onCheckBoxClicked"
             android:paddingLeft="24dp"
+            android:paddingStart="24dp"
             android:text="Chocolate"
             android:textSize="16sp" />
 
@@ -46,6 +60,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
             android:text="Quantity"
             android:textAllCaps="true"
             android:textSize="16sp" />
