strings.xml -add new language(preliminary support) - es
activity_main.xml
-change all the header's and button hardcoded string to resource string which is in default string.xml

MainActivity.java
-change all the hardcoded string to resource string which is in default string.xml
-disable email intent because it can't be use in emulator

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,13 +19,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:inputType="textMultiLine"
-            android:hint="Name" />
+            android:hint="@string/hint_name" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="toppings"
+            android:text="@string/toppings"
             android:textAllCaps="true"
             android:textSize="16sp" />
 
@@ -39,7 +39,7 @@
             android:paddingLeft="24dp"
             android:paddingStart="24dp"
             android:paddingRight="24dp"
-            android:text="Whipped Cream"
+            android:text="@string/whipped_cream_checkbox"
             android:textSize="16sp" />
 
         <CheckBox
@@ -51,7 +51,7 @@
             android:onClick="onCheckBoxClicked"
             android:paddingLeft="24dp"
             android:paddingStart="24dp"
-            android:text="Chocolate"
+            android:text="@string/chocolate_checkbox"
             android:textSize="16sp" />
 
         <TextView
@@ -61,7 +61,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
-            android:text="Quantity"
+            android:text="@string/initial_quantity"
             android:textAllCaps="true"
             android:textSize="16sp" />
 
@@ -105,7 +105,8 @@
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
-            android:text="order summary"
+            android:layout_marginStart="16dp"
+            android:text="@string/order_summary"
             android:textAllCaps="true"
             android:textSize="16sp" />
 
@@ -114,7 +115,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:text="$0"
+            android:layout_marginStart="16dp"
+            android:text="@string/initial_total_price"
             android:textColor="#000000"
             android:textSize="16sp" />
 
@@ -123,7 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:onClick="submitOrder"
-            android:text="order" />
+            android:text="@string/order_checkbox" />
 
     </LinearLayout>
 
