--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:onClick="onCheckBoxClicked"
             android:paddingLeft="24dp"
             android:paddingStart="24dp"
             android:paddingRight="24dp"
@@ -48,7 +47,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:onClick="onCheckBoxClicked"
             android:paddingLeft="24dp"
             android:paddingStart="24dp"
             android:text="@string/chocolate_checkbox"
@@ -61,7 +59,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
-            android:text="@string/initial_quantity"
+            android:text="@string/quantity"
             android:textAllCaps="true"
             android:textSize="16sp" />
 
@@ -84,7 +82,7 @@
                 android:id="@+id/quantity_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1"
+                android:text="@string/initial_quantity"
                 android:textColor="#000000"
                 android:textSize="16sp" />
 
@@ -125,7 +123,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:onClick="submitOrder"
-            android:text="@string/order_checkbox" />
+            android:text="@string/order" />
 
     </LinearLayout>
 
