--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,12 +22,9 @@
             android:hint="@string/hint_name" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/HeaderTextStyle"
             android:layout_margin="16dp"
-            android:text="@string/toppings"
-            android:textAllCaps="true"
-            android:textSize="16sp" />
+            android:text="@string/toppings" />
 
         <CheckBox
             android:id="@+id/whipped_cream_checkbox"
@@ -53,15 +50,12 @@
             android:textSize="16sp" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/HeaderTextStyle"
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
-            android:text="@string/quantity"
-            android:textAllCaps="true"
-            android:textSize="16sp" />
+            android:text="@string/quantity" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -98,15 +92,12 @@
 
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/HeaderTextStyle"
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
-            android:text="@string/order_summary"
-            android:textAllCaps="true"
-            android:textSize="16sp" />
+            android:text="@string/order_summary" />
 
         <TextView
             android:id="@+id/order_summary_text_view"
