--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,23 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <!-- App branding color for the app bar : this color is Blue 500 -->
+        <item name="colorPrimary">#2196F3</item>
+        <!-- Darker variant for the status bar and contextual app bar : this color is Blue 700 -->
+        <item name="colorPrimaryDark">#0069C0</item>
+        <!-- Theme UI controls like checkboxes and text fields : this color is Deep Orange 200 -->
+        <item name="colorAccent">#FFAB91</item>
+
+    </style>
+
+    <!-- Header Text Style -->
+    <style name="HeaderTextStyle">
+        <!-- customize theme -->
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
 </resources>
